# qtplatz

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL  Makefile  README  README-CROSS_COMPILE.md  README.md  SECURITY.md  apt-get.sh  armhf-profile.sh  boost.cmake  bootstrap-arm.sh  bootstrap-helio.sh  bootstrap.bat  bootstrap.sh  build.bat  device_emulator.sln  doxyfile.in  helio-cmake.sh  license.rtf  license.txt  mainpage.dox  makefile.nmake.in  pluginconfig.cmake  postinst.in  prerm.in  profile  profile.bat  qt-creator-build.md  qt4vars-vc10.bat  qt4vars-vc11.bat  qt5vars-vc11.bat  qt5vars.bat  qt6-creator-build.md  qtPlatz.pri  qtPlatz.pro  qtPlatz.sln  qtenv.bat  qtplatz-config.cmake  (+17 more)
contrib/: .gitignore  CMakeLists.txt  contrib.pri  contrib.pro  contrib.sln
contrib/accutof/: CMakeLists.txt
contrib/acqiris/: CMakeLists.txt
contrib/agilent/: CMakeLists.txt  agilent.pri  agilent.pro  agilentlibrary.pri  agilentplugin.pri  agmodinst-3.5.3-kernel-5.10.patch  boost.pri  qwt.pri
contrib/bnc565/: CMakeLists.txt  config.h.in  standalone.cmake
contrib/boost/: README.md
contrib/bruker/: CMakeLists.txt  bruker.pro
contrib/datautils/: README  count_frequency.py  count_frequency_plot.py  counting.sh  epochtime.py  makefile.counting  plot_chromatogram.py  timestamp.gnuplot  timestamp.sh
contrib/example-tof/: ace_tao.pri  boost.pri  example-tof.pro  qwt.pri  tao_idl.pri  tof.pri  tofadplugin.pri  tofplugin.pri  tofstaticlib.pri  version.pri
contrib/galactic/: galactic.pri  galactic.pro
contrib/infitof/: CMakeLists.txt
contrib/installer/: CMakeLists.txt  bootstrap-helio-cmake.sh  bootstrap.sh
contrib/jupyter-notebook/: adfs_rawdata_access.ipynb  chemicalformula.ipynb  dataprocessor.ipynb  dataprocessor_chromatogram.ipynb  dataprocessor_massspec.ipynb  dataprocessor_mscalib.ipynb  dataprocessor_peakresult.ipynb  dataprocessor_procmethod.ipynb  initial test.ipynb  isotopecluster.ipynb  plot_counting_gain_distribution.ipynb  plot_counting_spectrum.ipynb  rdkit.ipynb
contrib/linux/: CMakeLists.txt
contrib/multum/: CMakeLists.txt
contrib/mzxml/: datafile.cpp  datafile.hpp  datafile_factory.cpp  datafile_factory.hpp  mzxml.cpp  mzxml.hpp  mzxml.pro  mzxml.vcproj  mzxml_global.hpp
contrib/py_modules/: CMakeLists.txt  export.py  jupyter-run.sh  test_dataprocessor.py  testadfs.py  testtuple.py  testuuid.py
contrib/scripts/: debian-multiarch-setup.sh  linux-boost-setup.sh  linux-cmake-setup.sh  linux-initial-setup.sh  linux-qwt-setup.sh  linux-rdkit-setup.sh
contrib/shrader/: CMakeLists.txt  shrader.pro
contrib/socfpga/: CMakeLists.txt
contrib/windows/: CMakeLists.txt
contrib/wolfram/: CMakeLists.txt  isotope.nb  standalone.cmake  wstp_rawread.nb
linux/dg/: CMakeLists.txt  main.cpp  ppio.cpp  ppio.hpp
scripts/windows/: CMakeLists.txt  boost-build.bat.in  boost.bat.in  boost.cmake  debugenv.bat  dot.emacs  download.cmake  eigen-bootstrap.bat.in  eigen.bat.in  eigen.cmake  git.cmake  maeparser-bootstrap.bat.in  maeparser.cmake  netcdf-c_4.9.2.patch  netcdf-c_4.9.2_build.md  netcdf-c_build_trial.md  opencv-bootstrap.bat.in  opencv.bat.in  opencv.cmake  qwt-build.bat.in  qwt.cmake  qwtconfig.cmake  rdkit-bootstrap.bat.in  rdkit.bat.in  rdkit.cmake  setenv.bat  user-config.jam.in
src/: CMakeLists.txt  ace_tao.pri  adilibrary.pri  adiplugin.pri  adplugin.in  adplugin.pri  boost.pri  cleanpath.pri  config.pri  license.txt  openbabel.pri  openssl.pri  qtplatz_lib_static.pri  qtplatz_library.pri  qtplatz_libs.pri  qtplatz_plugin.pri  qtplatz_qml.pri  qtplatz_servant.pri  qtplatzlibrary.pri  qtplatzplugin.pri  qtplatzstaticlib.pri  qwt.pri  rdkit.pri  rpath.pri  src.pro  tao_idl.pri  version.bat  version.pri  version.sh
src/adics/: adics.pro  adics.sln  adics.vcproj  ibrokermanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  orbserver.h  session_i.cpp  signal_handler.cpp
src/adplugins/: CMakeLists.txt  adplugins.pro  servants.pro
src/app/: CMakeLists.txt  Info.plist.in  app.pro  app_version.h  app_version.h.in  debug.plt  main.cpp  qtPlatz.rc  qtPlatz.vcproj  qtplatz.vcproj  qtplatz.vcxproj  version.h  version.sh
src/app.org/: main.cpp  qtplatz.rc
src/controller/: controller.idl  controller.pro  controller.vcproj  deviceproxy.cpp  deviceproxy.h  devicetext.cpp  devicetext.h  eventreceiver.cpp  eventreceiver.h  main.cpp  maincontrollerwindow.cpp  maincontrollerwindow.h  maincontrollerwindow.ui  session_i.cpp  session_i.h  treemodel.cpp  treemodel.h
src/device_controller/: constants.h  device_controller.vcproj  deviceproxy.cpp  deviceproxy.h  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.cpp  task.h  tofcontroller.idl  tofcontroller_global.h  tofobserver_i.cpp  tofobserver_i.h  tofsession_i.cpp  tofsession_i.h  traceobserver_i.h
src/device_emulator/: PFTBA.txt  constants.h  device_averager.cpp  device_averager.h  device_emulator.pro  device_emulator.vcproj  device_hvcontroller.cpp  device_hvcontroller.h  device_state.cpp  device_state.h  deviceevent.cpp  deviceevent.h  devicefacade.cpp  devicefacade.h  eventreceiver.cpp  eventreceiver.h  main.cpp  maindevicewindow.cpp  maindevicewindow.h  maindevicewindow.ui  reactor_thread.h  roleanalyzer.cpp  roleanalyzer.h  roleaverager.cpp  roleaverager.h  roleesi.cpp  roleesi.h  txtspectrum.cpp  txtspectrum.h
src/instmanager/: ibrokermanager.cpp  instmanager.pro  instmanager.vcproj  main.cpp  orbserver.h  receiver_i.h  session_i.cpp  session_i.h  signal_handler.cpp
src/libs/: CMakeLists.txt  adinterface-vc10.sln  libs.pro  qtplatz.conf  qtplatz.conf.in  qtplatz_version.h
src/plugins/: CMakeLists.txt  plugins.pro  pluginspec.in
src/sql/: elapsed_time.sql  export.sql  merge_peaks.sh  quan_grouping_samples.sql  scanlaw.sql  update_elapsed_time.sql
src/test_controller/: Callback.h  maincontrollerwindow.cpp  maincontrollerwindow.h  maincontrollerwindow.ui  mcastserver.cpp  mcastserver.h  test_controller.pro
src/test_device/: deviceevent.cpp  deviceevent.h  main.cpp  maindevicewindow.cpp  maindevicewindow.h  test_device.pro  (+1 more)
tests/: CMakeLists.txt  bootstrap.sh  tests.pro
(+6146 files in other folders)
